--- a/public/forgot-password/index.html
+++ b/public/forgot-password/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sign In - UDo</title>
+  <title>Forgot Password - UDo</title>
   <link rel="icon" type="image/jpeg" href="../logo/uletter.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,15 +56,15 @@
     </div>
   </header>
 
-  <!-- Main Content - Sign In Form -->
+  <!-- Main Content - Forgot Password Form -->
   <main class="flex-1 flex items-center justify-center px-4 py-12">
     <div class="w-full max-w-md bg-white rounded-2xl shadow-xl p-8 md:p-10">
       <div class="text-center mb-8">
         <h1 class="text-4xl font-bold mb-2">
           <span class="text-orange-500">U</span><span class="text-black">Do</span>
         </h1>
-        <h2 class="text-2xl font-semibold text-gray-900">Welcome back</h2>
-        <p class="text-gray-600 mt-2">Sign in to continue to UDo</p>
+        <h2 class="text-2xl font-semibold text-gray-900">Forgot your password?</h2>
+        <p class="text-gray-600 mt-2">No worries, we'll send you reset instructions.</p>
       </div>
 
       <form class="space-y-5">
@@ -81,45 +81,29 @@
           />
         </div>
 
-        <!-- Password Field -->
-        <div>
-          <label for="password" class="block text-sm font-medium text-gray-700 mb-2">Password</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            required
-            class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent transition"
-            placeholder="•••••••••"
-          />
-        </div>
-
-        <!-- Remember Me & Forgot Password -->
-        <div class="flex items-center justify-between">
-          <label class="flex items-center">
-            <input
-              type="checkbox"
-              name="remember"
-              class="w-4 h-4 text-orange-500 focus:ring-orange-500 rounded"
-            />
-            <span class="ml-2 text-sm text-gray-600">Remember me</span>
-          </label>
-          <a href="../forgot-password/" class="text-sm text-orange-500 hover:underline font-medium">Forgot password?</a>
-        </div>
-
         <!-- Submit Button -->
         <button
           type="submit"
           class="w-full bg-orange-500 hover:bg-orange-600 text-white font-semibold py-3.5 px-6 rounded-lg text-lg transition duration-300 shadow-md hover:shadow-lg"
         >
-          Sign In
+          Send Reset Link
         </button>
       </form>
+
+      <!-- Back to Sign In Link -->
+      <div class="text-center mt-6">
+        <a href="../login/" class="inline-flex items-center text-gray-600 hover:text-orange-500 font-medium transition">
+          <svg class="w-5 h-5 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+          </svg>
+          Back to Sign in
+        </a>
+      </div>
 
       <!-- Divider -->
       <div class="flex items-center my-6">
         <div class="flex-1 border-t border-gray-300"></div>
-        <span class="px-4 text-sm text-gray-500">or sign in with</span>
+        <span class="px-4 text-sm text-gray-500">or continue with</span>
         <div class="flex-1 border-t border-gray-300"></div>
       </div>
 
@@ -144,12 +128,6 @@
           <span class="text-sm font-medium text-gray-700">Facebook</span>
         </button>
       </div>
-
-      <!-- Sign Up Link -->
-      <p class="text-center text-gray-600 mt-6">
-        Don't have an account? 
-        <a href="../signup/" class="text-orange-500 font-semibold hover:underline">Sign up</a>
-      </p>
     </div>
   </main>
 
@@ -250,7 +228,8 @@
     const form = document.querySelector('form');
     form.addEventListener('submit', (e) => {
       e.preventDefault();
-      alert('Login successful!');
+      const email = document.getElementById('email').value;
+      alert(`Password reset link has been sent to ${email}. Please check your email inbox.`);
       form.reset();
     });
   </script>
