--- a/public/login/index.html
+++ b/public/login/index.html
@@ -28,9 +28,9 @@
 
   <!-- Top Search Bar -->
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-gray-200 shadow-sm">
-    <h1 class="absolute left-12 top-1/2 -translate-y-1/2 z-[60]">
+    <a href="../index.html" class="absolute left-12 top-1/2 -translate-y-1/2 z-[60] hover:opacity-90 transition">
       <img src="../UDO-6.jpg" alt="UDO" class="h-32 w-auto max-w-none shadow-lg rounded-lg" />
-    </h1>
+    </a>
 
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between gap-4">
       <div class="w-40 hidden lg:block"></div>
