--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
 
   <!-- Top Search Bar -->
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-gray-200 shadow-sm">
-    <h1 class="absolute left-12 top-1/2 -translate-y-1/2 z-[60]">
+    <a href="index.html" class="absolute left-12 top-1/2 -translate-y-1/2 z-[60] hover:opacity-90 transition">
       <img src="UDO-6.jpg" alt="UDO" class="h-32 w-auto max-w-none shadow-lg rounded-lg" />
-    </h1>
+    </a>
 
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between gap-4">
       <div class="w-40 hidden lg:block"></div>
@@ -196,14 +196,14 @@
         <!-- Left Column - Text Content -->
         <div class="flex-1 flex flex-col justify-center">
           <h2 class="text-4xl lg:text-5xl font-bold text-gray-900 mb-6">
-            Sign Up to U Do, Get Clients and Get Paid
+            Sign Up to UDo, Get Clients and Get Paid
           </h2>
           <p class="text-lg text-gray-600 leading-relaxed mb-8">
             Join our network of skilled professionals and connect with customers who need your services. Set your own rates, choose the jobs you want, and get paid directly. No middleman taking a cut - you keep what you earn.
           </p>
-          <button class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-full text-lg transition duration-300 shadow-md hover:shadow-lg w-fit">
+          <a href="join-as-professional/" class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-full text-lg transition duration-300 shadow-md hover:shadow-lg w-fit inline-block">
             Join as Professional
-          </button>
+          </a>
         </div>
 
         <!-- Right Column - Image -->
@@ -403,7 +403,7 @@
           <ul class="space-y-2">
             <li><a href="#" class="text-gray-400 hover:text-orange-500 transition">Home</a></li>
             <li><a href="#" class="text-gray-400 hover:text-orange-500 transition">Services</a></li>
-            <li><a href="#" class="text-gray-400 hover:text-orange-500 transition">Join as Pro</a></li>
+            <li><a href="join-as-professional/" class="text-gray-400 hover:text-orange-500 transition">Join as Pro</a></li>
             <li><a href="#" class="text-gray-400 hover:text-orange-500 transition">How It Works</a></li>
           </ul>
         </div>
