--- a/public/profiles-list/index.html
+++ b/public/profiles-list/index.html
@@ -121,7 +121,7 @@
       </div>
 
       <!-- Profiles Grid -->
-      <div id="profilesGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div id="profilesGrid" class="space-y-4">
         <!-- Profiles will be rendered here by JavaScript -->
       </div>
 
@@ -396,36 +396,52 @@
       noResults.classList.add('hidden');
 
       grid.innerHTML = profilesToRender.map(pro => `
-        <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition-all duration-300 card-hover cursor-pointer overflow-hidden" onclick="openProfileModal(${pro.id})">
-          <div class="relative">
-            <img src="${pro.image}" alt="${pro.name}" class="w-full h-56 object-cover" />
-            ${pro.verified ? '<div class="absolute top-3 right-3 bg-green-500 text-white text-xs font-semibold px-3 py-1 rounded-full flex items-center gap-1"><svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/></svg>Verified</div>' : ''}
-            ${pro.available ? '<div class="absolute top-3 left-3 bg-orange-500 text-white text-xs font-semibold px-3 py-1 rounded-full">Available</div>' : '<div class="absolute top-3 left-3 bg-gray-500 text-white text-xs font-semibold px-3 py-1 rounded-full">Unavailable</div>'}
+        <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition-all duration-300 card-hover cursor-pointer overflow-hidden flex flex-col md:flex-row" onclick="openProfileModal(${pro.id})">
+          <div class="relative md:w-64 md:h-auto h-48 flex-shrink-0">
+            <img src="${pro.image}" alt="${pro.name}" class="w-full h-full object-cover" />
+            <div class="absolute top-3 left-3 flex gap-2">
+              ${pro.available ? '<span class="bg-orange-500 text-white text-xs font-semibold px-3 py-1 rounded-full">Available</span>' : '<span class="bg-gray-500 text-white text-xs font-semibold px-3 py-1 rounded-full">Unavailable</span>'}
+              ${pro.verified ? '<span class="bg-green-500 text-white text-xs font-semibold px-3 py-1 rounded-full flex items-center gap-1"><svg class="w-3 h-3" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/></svg>Verified</span>' : ''}
+            </div>
           </div>
-          <div class="p-5">
-            <h3 class="text-xl font-bold text-gray-900 mb-1">${pro.name}</h3>
-            <p class="text-orange-500 font-semibold text-sm mb-2">${pro.title}</p>
-            <div class="flex items-center gap-2 mb-3">
-              <div class="flex items-center text-yellow-500">
-                ${renderStars(pro.rating)}
+          <div class="p-6 flex-1">
+            <div class="flex flex-col md:flex-row md:items-start md:justify-between gap-2 mb-3">
+              <div>
+                <h3 class="text-2xl font-bold text-gray-900 mb-1">${pro.name}</h3>
+                <p class="text-orange-500 font-semibold">${pro.title}</p>
               </div>
-              <span class="text-gray-600 text-sm">${pro.rating} (${pro.reviewCount} reviews)</span>
+              <div class="text-right">
+                <div class="text-2xl font-bold text-gray-900">$${pro.price}<span class="text-base font-normal text-gray-600">/${pro.priceType}</span></div>
+              </div>
             </div>
-            <div class="flex items-center gap-2 text-gray-600 text-sm mb-2">
-              <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
-              </svg>
-              <span>${pro.location}</span>
-              <span class="mx-2">•</span>
-              <span>${pro.experience} years exp</span>
+            
+            <div class="flex flex-wrap items-center gap-4 mb-4">
+              <div class="flex items-center gap-2">
+                <div class="flex items-center text-yellow-500">
+                  ${renderStars(pro.rating)}
+                </div>
+                <span class="text-gray-700 font-medium">${pro.rating}</span>
+                <span class="text-gray-500">(${pro.reviewCount} reviews)</span>
+              </div>
+              <div class="flex items-center gap-2 text-gray-600">
+                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                </svg>
+                <span>${pro.location}</span>
+              </div>
+              <div class="flex items-center gap-2 text-gray-600">
+                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                </svg>
+                <span>${pro.experience} years exp</span>
+              </div>
             </div>
-            <div class="flex items-center gap-2 text-gray-900 font-bold text-lg">
-              <span>$${pro.price}/${pro.priceType}</span>
-            </div>
-            <div class="flex flex-wrap gap-1 mt-3">
-              ${pro.skills.slice(0, 3).map(skill => `<span class="bg-gray-100 text-gray-700 text-xs px-2 py-1 rounded-full">${skill}</span>`).join('')}
-              ${pro.skills.length > 3 ? `<span class="bg-gray-100 text-gray-700 text-xs px-2 py-1 rounded-full">+${pro.skills.length - 3} more</span>` : ''}
+
+            <p class="text-gray-600 text-sm mb-4 line-clamp-2">${pro.bio}</p>
+
+            <div class="flex flex-wrap gap-2">
+              ${pro.skills.map(skill => `<span class="bg-orange-50 text-orange-700 text-sm px-3 py-1 rounded-full">${skill}</span>`).join('')}
             </div>
           </div>
         </div>
