--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
     <!-- Grid of image cards -->
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-10 gap-y-5 md:gap-x-12 md:gap-y-6">
       <!-- Card 1 -->
-      <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
+      <a href="profiles-list/?category=furniture-assembly" class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto cursor-pointer">
         <img
           src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=800&q=80"
           alt="Furniture assembly"
@@ -92,10 +92,10 @@
           <p class="text-xs uppercase tracking-wider opacity-90">Trending now</p>
           <p class="text-4xl font-semibold">Furniture assembly</p>
         </div>
-      </div>
+      </a>
 
       <!-- Card 2 -->
-      <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
+      <a href="profiles-list/?category=mount-art-shelves" class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto cursor-pointer">
         <img
           src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=800&q=80"
           alt="Mount art or shelves"
@@ -106,10 +106,10 @@
           <p class="text-xs uppercase tracking-wider opacity-90">Home improvement</p>
           <p class="text-4xl font-semibold">Mount art or shelves</p>
         </div>
-      </div>
+      </a>
 
       <!-- Card 3 -->
-      <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
+      <a href="profiles-list/?category=movers" class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto cursor-pointer">
         <img
           src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=800&q=80"
           alt="Movers"
@@ -120,10 +120,10 @@
           <p class="text-xs uppercase tracking-wider opacity-90">Professional help</p>
           <p class="text-4xl font-semibold">Movers</p>
         </div>
-      </div>
+      </a>
 
       <!-- Card 4 -->
-      <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
+      <a href="profiles-list/?category=electrical-help" class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto cursor-pointer">
         <img
           src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=800&q=80"
           alt="Electrical help"
@@ -134,10 +134,10 @@
           <p class="text-xs uppercase tracking-wider opacity-90">Expert service</p>
           <p class="text-4xl font-semibold">Electrical help</p>
         </div>
-      </div>
+      </a>
 
       <!-- Card 5 -->
-      <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
+      <a href="profiles-list/?category=plumbing-help" class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto cursor-pointer">
         <img
           src="https://images.unsplash.com/photo-1585704032915-c3400ca199e7?auto=format&fit=crop&w=800&q=80"
           alt="Plumbing help"
@@ -148,10 +148,10 @@
           <p class="text-xs uppercase tracking-wider opacity-90">Reliable service</p>
           <p class="text-4xl font-semibold">Plumbing help</p>
         </div>
-      </div>
+      </a>
 
       <!-- Card 6 -->
-      <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
+      <a href="profiles-list/?category=cleaning-help" class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto cursor-pointer">
         <img
           src="https://images.unsplash.com/photo-1581578731548-c64695cc6952?auto=format&fit=crop&w=800&q=80"
           alt="Cleaning help"
@@ -162,7 +162,7 @@
           <p class="text-xs uppercase tracking-wider opacity-90">Fresh & clean</p>
           <p class="text-4xl font-semibold">Cleaning help</p>
         </div>
-      </div>
+      </a>
     </div>
   </main>
 
