--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -179,8 +179,8 @@
     <!-- Marketing Hero Banners -->
     <div class="px-4 pb-12">
         <!-- Banner 1 -->
-        <div class="relative w-full h-64 rounded-2xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/n.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-            <div class="absolute inset-0 bg-gradient-to-r from-blue-900 to-blue-600 bg-opacity-75 flex items-center">
+        <div class="relative w-full h-[512px] rounded-2xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/n.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+            <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
                 <div class="px-8 text-white">
                     <h3 class="text-3xl font-bold mb-2">Get subscription: Save over $530/mo</h3>
                     <p class="text-lg mb-4 opacity-90">Great food is better with company. Subscribe to your favorite local hosts and save big on home-cooked favorites. Average savings: $40/week.*</p>
