--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -181,10 +181,10 @@
         <!-- Banner 1 -->
         <div class="relative w-full h-[512px] rounded-2xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/n.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
             <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
-                <div class="px-8 text-white">
-                    <h3 class="text-3xl font-bold mb-2">Get subscription: Save over $530/mo</h3>
-                    <p class="text-lg mb-4 opacity-90">Great food is better with company. Subscribe to your favorite local hosts and save big on home-cooked favorites. Average savings: $40/week.*</p>
-                    <button class="bg-white text-blue-600 font-semibold px-6 py-3 rounded-lg hover:bg-gray-100 transition-colors">Get it now</button>
+                <div class="px-8 py-6 bg-white rounded-2xl max-w-lg mx-4">
+                    <h3 class="text-3xl font-bold mb-2 text-gray-800">Get subscription: Save over $530/mo</h3>
+                    <p class="text-lg mb-4 text-gray-600">Great food is better with company. Subscribe to your favorite local hosts and save big on home-cooked favorites. Average savings: $40/week.*</p>
+                    <button class="bg-blue-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors">Get it now</button>
                 </div>
             </div>
         </div>
